# DocumentScanner

./: .gitignore  LICENSE  README.md  cam.py  environment.yml  main.py  pyproject.toml
dep/: DocumentScanner.py  corner_detection.py  documentScanner.ipynb
depFree/: hough_transform.py
notebooks/: documentScanner.ipynb
src/: corner_detection.py  detection.py
src/util/: geometry.py  plot.py
util/: geometry.py  plot.py
