requires = ["setuptools"]
build-backend = "setuptools.build_meta" 

[project]
name = "documentScanner"

version = "1.0.0"

description = "Document detection using hough transform"

readme = "README.md"

requires-python = ">=3.13"

license = { file = "LICENSE" }

keywords = ["cv"]

authors = [{ name = "DerPenz"}]

dependencies = []

[tool.setuptools]
package-data = { "sample" = ["*.dat"] }